--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo a</h2>
+    <h2>WebBT/TinyNode Demo b</h2>
 
 	
 
@@ -130,7 +130,6 @@ Copyright 2017 Google Inc. All Rights Reserved.
 			swapCanvases();
         };
     }
-</script>
 
 function swapCanvases(){
   if(env_chart.style.visibility=='visible'){
