--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </table> 
 
 <canvas id="env_chart" width="340" height="200" style="display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
-<canvas id="acc_chart" width="340" height="200" style="display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
+<canvas id="acc_chart" width="340" height="200" style="display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9; visibility: hidden;"></canvas>
 
 <script>
     var rad = document.myForm.ch_type;
@@ -281,7 +281,7 @@ function disconnect() {
 	return service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
   })
    .then(characteristic => {
-		  // Writing 1 is the signal to start measurement
+		  // Writing 0 is the signal to stop measurement
 		  var setMeasOff = new Uint8Array([0]);
 		  return characteristic.writeValue(setMeasOff);
 		})
