--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo d</h2>
+    <h2>WebBT/TinyNode Demo e</h2>
 
 	
 
@@ -86,9 +86,11 @@ function swapCanvases(){
   if(env.style.visibility=='visible'){
     env.style.visibility='hidden';
     acc.style.visibility='visible';
+	document.getElementById("p7").innerHTML = " acc";
   }else{
     env.style.visibility='visible';
     acc.style.visibility='hidden';
+	document.getElementById("p7").innerHTML = " aenv";
   }
 }
 </script>
