--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ function swapCanvases(){
   </tr>
 </table> 
 
-<div id=wrapper style="position:relative;">
+<div id="wrapper" style="position:relative;">
 	<canvas id="env_chart" width="340" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
 	<canvas id="acc_chart" width="340" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9; visibility: hidden;"></canvas>
 </div>
