--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo g</h2>
+    <h2>WebBT/TinyNode Demo h</h2>
 
 	
 
@@ -79,7 +79,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 <script>
 document.getElementById("ch_type").onclick=function(){
-  swapCanvases();
+	document.getElementById("p9").innerHTML = "klik";
+	swapCanvases();
 };
 
 function swapCanvases(){
@@ -489,6 +490,10 @@ function anyNamedDevice() {
     }
   });
   
+  document.querySelector('ch_type').addEventListener('click', function() {
+        swapCanvases();
+    }
+  });
 </script>
 
 <script>
