--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo i</h2>
+    <h2>WebBT/TinyNode Demo j</h2>
 
 	
 
@@ -79,6 +79,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 <script>
   document.querySelector('ch_type').addEventListener('click', function() {
+		document.getElementById("p9").innerHTML = "klik";
         swapCanvases();
     }
   });
