--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo j</h2>
+    <h2>WebBT/TinyNode Demo k</h2>
 
 	
 
@@ -78,16 +78,15 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </table> 
 
 <script>
-  document.querySelector('ch_type').addEventListener('click', function() {
-		document.getElementById("p9").innerHTML = "klik";
-        swapCanvases();
-    }
-  });
-
-<!-- document.getElementById("ch_type").onclick=function(){ -->
-	<!-- document.getElementById("p9").innerHTML = "klik"; -->
+  <!-- document.querySelector('ch_type').addEventListener('click', function() { -->
+		<!-- document.getElementById("p9").innerHTML = "klik"; -->
+        <!-- swapCanvases(); -->
+    <!-- } -->
+  <!-- }); -->
+document.getElementById("ch_type").onclick=function(){
+	document.getElementById("p9").innerHTML = "klik";
 	<!-- swapCanvases(); -->
-<!-- }; -->
+};
 
 function swapCanvases(){
   if(env_chart.style.visibility=='visible'){
