--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo u</h2>
+    <h2>WebBT/TinyNode Demo a</h2>
 
 	
 
@@ -104,8 +104,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
  <table style="width:100%; text-align: center; font-weight:600; border-spacing: 0px; margin-top:10px;  background-color:#E6E0F8">
     <tr>
-		<td colspan="3" style="width:50%;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="env" checked> Environment</td>
-		<td colspan="3" style="width:50%;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="acc"> Acceleration</td>
+		<td colspan="3" style="width:50%;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="1" checked> Environment</td>
+		<td colspan="3" style="width:50%;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="2"> Acceleration</td>
 	</tr>
   <tr>
     <td colspan="2"><p id="p1" onselectstart="return false">P:</p></td>
@@ -203,7 +203,7 @@ var currentValue = 0;
 
 function handleClick(myRadio) {
     //alert('Old value: ' + currentValue);
-    //alert('New value: ' + myRadio.value);
+    alert('New value: ' + myRadio.value);
     currentValue = myRadio.value;
     swapCanvases(currentValue);
 }
