--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo f</h2>
+    <h2>WebBT/TinyNode Demo g</h2>
 
 	
 
@@ -356,7 +356,7 @@ function time(text) {
   
     switch (dataToStream)
    {
-	case 'p1':  if (selectedData == 'env'){
+	case 'p1':  if (selectedData == 1){
 					min = 950;
 					max = 1080;
 					break;
