--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo 22g</h2>
+    <h2>WebBT/TinyNode Demo 24g</h2>
 	
 
 <script>
@@ -189,8 +189,8 @@ var bluetoothDevice;
 var setter;
 var getter;
 var msgcounter;
-var env_chart = new SmoothieChart({millisPerPixel:10,maxValueScale:1.16,grid:{millisPerLine:6000},yRangeFunction:myYRangeFunction});
-var acc_chart = new SmoothieChart({millisPerPixel:10,maxValueScale:1.16,grid:{millisPerLine:6000},yRangeFunction:myYRangeFunction});
+var env_chart = new SmoothieChart({millisPerPixel:10,maxValueScale:1.16,grid:{millisPerLine:6000},yRangeFunction:envYRangeFunction});
+var acc_chart = new SmoothieChart({millisPerPixel:10,maxValueScale:1.16,grid:{millisPerLine:6000},yRangeFunction:accYRangeFunction});
 var ts1 = new TimeSeries();
 var ts_acc1 = new TimeSeries();
 var ts_acc2 = new TimeSeries();
@@ -348,22 +348,16 @@ function time(text) {
   log('[' + new Date().toJSON().substr(11, 8) + '] ' + text);
 }
 
-  function myYRangeFunction(range) {
+  function envYRangeFunction(range) {
   // TODO implement your calculation using range.min and range.max
   var min = 20;
   var max = 30;
   
     switch (dataToStream)
    {
-	case 'p1':  if (selectedData == 1){
-					min = 950;
-					max = 1080;
-					break;
-				}else{
-					min = -5;
-					max = 5;
-					break;
-				}
+	case 'p1':  min = 950;
+				max = 1080;
+				break;
 	case 'p2':  min = 10;
 				max = 40;
 				break;
@@ -372,6 +366,14 @@ function time(text) {
 				break;
    }
   
+  return {min: min, max: max};
+}
+
+ function accYRangeFunction(range) {
+  // TODO implement your calculation using range.min and range.max
+  var min = -5;
+  var max = 5;
+    
   return {min: min, max: max};
 }
 
