--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   };
 </script>
 
- <table style="width:100%; text-align: center; font-weight:600; border-spacing: 0px; margin-top:10px;  background-color:#E6E0F8">
+ <table style="width:100%; text-align: center; font-weight:600; border-spacing: 0px; margin-top:10px; background-color:#E6E0F8; padding:6px;">
     <tr>
 		<td colspan="3" style="width:50%;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="1" checked> Environment</td>
 		<td colspan="3" style="width:50%;"><input type="radio" onclick="handleClick(this);" name="ch_type" value="2"> Acceleration</td>
@@ -123,7 +123,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 <div id="wrapper" style="position:relative;">
 	<canvas id="env_chart_canvas" width="340" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
-	<canvas id="acc_chart_canvas" width="340" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9; visibility: hidden;"></canvas>
+	<canvas id="acc_chart_canvas" width="340" height="200" style="position:absolute; display: block; margin: 0 auto; border:1px solid #ffffff; background: #e5e7e9; visibility: hidden;"></canvas>
 </div>
 
 <script>
