--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo 234</h2>
+    <h2>WebBT/TinyNode Demo das</h2>
 	
 
 <script>
@@ -208,13 +208,13 @@ function swapCanvases(value){
 	document.getElementById("p9").innerHTML = value;
 	
 	if(value==1 || value==0){
-	document.getElementById("env_chart_canvas").style.visibility='hidden';
-	document.getElementById("acc_chart_canvas").style.visibility='visible';
+	document.getElementById("env_chart_canvas").style.visibility='visible';
+	document.getElementById("acc_chart_canvas").style.visibility='hidden';
 		//env_chart_canvas.style.visibility='hidden';
 		//acc_chart_canvas.style.visibility='visible';
 	}else if(value==2){
-		env_chart_canvas.style.visibility='visible';
-		acc_chart_canvas.style.visibility='hidden';
+		env_chart_canvas.style.visibility='hidden';
+		acc_chart_canvas.style.visibility='visible';
 	}
 }
 
